--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>id.web.widat</groupId>
 	<artifactId>SimpleRESTIntegration</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2</version>
 	<packaging>jar</packaging>
 
-	<url>https://github.com/wid4t/SimpleRESTIntegration</url>
+	<url>https://widat.web.id</url>
 
 	<properties>
 		<maven.compiler.source>1.6</maven.compiler.source>
@@ -25,11 +25,6 @@
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-			<version>4.4.1</version>
 		</dependency>
 	</dependencies>
 
