--- a/release.properties
+++ b/release.properties
@@ -1,8 +1,8 @@
 #release configuration
-#Fri Oct 27 06:11:49 ICT 2017
+#Tue Nov 07 12:13:39 ICT 2017
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
 pushChanges=true
-scm.url=scm\:svn\:https\://svn.sonatype.org/spice/tags/SimpleRESTIntegration-0.0.2
+scm.url=scm\:svn\:https\://svn.sonatype.org/spice/trunk/oss/oss-parent-9/SimpleRESTIntegration
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
