--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<modelVersion>4.0.0</modelVersion> 
 	<groupId>id.web.widat</groupId>
 	<artifactId>SimpleRESTIntegration</artifactId>
-	<version>0.0.3</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<url>http://widat.web.id</url>
