--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,15 @@
 #release configuration
-#Tue Nov 07 12:13:39 ICT 2017
+#Tue Nov 07 13:45:07 ICT 2017
 scm.tagNameFormat=@{project.artifactId}-@{project.version}
+scm.tag=SimpleRESTIntegration-0.0.3
 pushChanges=true
 scm.url=scm\:svn\:https\://svn.sonatype.org/spice/trunk/oss/oss-parent-9/SimpleRESTIntegration
 preparationGoals=clean verify
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
+project.scm.id.web.widat\:SimpleRESTIntegration.empty=true
+project.dev.id.web.widat\:SimpleRESTIntegration=0.0.4-SNAPSHOT
+project.rel.id.web.widat\:SimpleRESTIntegration=0.0.3
 exec.additionalArguments=\ -Psonatype-oss-release
 exec.snapshotReleasePluginAllowed=false
-completedPhase=check-poms
+completedPhase=generate-release-poms
