--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<modelVersion>4.0.0</modelVersion> 
 	<groupId>id.web.widat</groupId>
 	<artifactId>SimpleRESTIntegration</artifactId>
-	<version>0.0.3-SNAPSHOT</version>
+	<version>0.0.3</version>
 	<packaging>jar</packaging>
 
 	<url>http://widat.web.id</url>
@@ -62,4 +62,10 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+  <scm>
+    <connection>scm:svn:http://svn.sonatype.org/spice/tags/SimpleRESTIntegration-0.0.3</connection>
+    <developerConnection>scm:svn:https://svn.sonatype.org/spice/tags/SimpleRESTIntegration-0.0.3</developerConnection>
+    <url>http://svn.sonatype.org/spice/tags/SimpleRESTIntegration-0.0.3</url>
+  </scm>
 </project>
